tests/ui/confuse-field-and-method/private-field.stderr
error[E0599]: no method named `dog_age` found for struct `Dog` in the current scope
  --> $DIR/private-field.rs:16:23
   |
LL |     pub struct Dog {
   |     -------------- method `dog_age` not found for this struct
...
LL |     let dog_age = dog.dog_age();
   |                       ^^^^^^^ private field, not a method

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
